--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:27+0200\n"
+"PO-Revision-Date: 2010-06-12 15:30+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2887,7 +2887,7 @@ msgstr "PDF"
 
 #: libraries/export/pdf.php:23
 msgid "(Generates a report containing the data of a single table)"
-msgstr "(Tek tablonun verisini içeren bir rapor üretir)"
+msgstr "(Tek bir tablonun verisini içeren bir rapor üretir)"
 
 #: libraries/export/pdf.php:24
 msgid "Report title"
