Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -3201,7 +3201,7 @@ msgstr "Hiçbiri"
 #. l10n: This is currently used only in Japanese locales
 #: libraries/kanji-encoding.lib.php:151
 msgid "Convert to Kana"
-msgstr ""
+msgstr "Kana'ya dönüştür"
 
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
