Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:32+0200\n"
+"PO-Revision-Date: 2010-06-12 15:37+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3814,7 +3814,6 @@ msgid "Length/Values"
 msgstr "Uzunluk/Değerler"
 
 #: libraries/tbl_properties.inc.php:105
-#, fuzzy
 #| msgid ""
 #| "If field type is \"enum\" or \"set\", please enter the values using this "
 #| "format: 'a','b','c'...<br />If you ever need to put a backslash (\"\\\") "
@@ -3826,10 +3825,10 @@ msgid ""
 "a single quote (\"'\") amongst those values, precede it with a backslash "
 "(for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Eğer alan türü \"enum\" veya \"set\" ise lütfen değerleri bu biçimi "
-"kullanarak girin: 'a','b','c'...<br />Eğer bu değerler arasına hep ters eğik "
-"çizgi (\"\\\") veya tek tırnak (\"'\") koymanız gerekirse, önlerine ters "
-"eğik çizgi koyun (örneğin '\\\\xyz' veya 'a\\'b')."
+"Eğer sütun türü \"enum\" veya \"set\" ise lütfen değerleri bu biçimi kullanarak "
+"girin: 'a','b','c'...<br />Eğer bu değerler arasına hep ters eğik çizgi "
+"(\"\\\") veya tek tırnak (\"'\") koymanız gerekirse, önlerine ters eğik çizgi "
+"koyun (örneğin '\\\\xyz' veya 'a\\'b')."
 
 #: libraries/tbl_properties.inc.php:106
 msgid ""
