--- a/po/tr.po
+++ b/po/tr.po
@@ -3904,10 +3904,10 @@ msgid "Save"
 msgstr "Kaydet"
 
 #: libraries/tbl_properties.inc.php:780 tbl_structure.php:542
-#, fuzzy, php-format
+#, php-format
 #| msgid "Add column(s)"
 msgid "Add %s column(s)"
-msgstr "Sekme(leri) ekle"
+msgstr "%s sütun ekle"
 
 #: libraries/tbl_properties.inc.php:784 tbl_structure.php:536
 #, fuzzy
