Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:38+0200\n"
+"PO-Revision-Date: 2010-06-12 15:39+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3919,7 +3919,6 @@ msgid "Event"
 msgstr "Olay"
 
 #: libraries/transformations/application_octetstream__download.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a link to download the binary data of the field. You can use the "
 #| "first option to specify the filename, or use the second option as the "
@@ -3931,9 +3930,9 @@ msgid ""
 "of a column which contains the filename. If you use the second option, you "
 "need to set the first option to the empty string."
 msgstr ""
-"Alanın binari verisini indirmek için bağlantı görüntüler. Dosya adını "
+"Sütunun binari verisini indirmek için bir bağlantı görüntüler. Dosya adını "
 "belirlemek için ilk seçeneği kullanabilirsiniz ya da dosya adını içeren "
-"alanın adı olarak ikinci seçeneği kullanabilirsiniz. Eğer ikinci seçeneği "
+"sütünun adı olarak ikinci seçeneği kullanabilirsiniz. Eğer ikinci seçeneği "
 "kullanırsanız birinci seçeneği boş karakter dizgisi olarak ayarlamanız "
 "gerekir."
 
