--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:39+0200\n"
+"PO-Revision-Date: 2010-06-12 15:41+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3958,7 +3958,6 @@ msgid "Displays a link to download this image."
 msgstr "Bu resmi indirme için bağlantı görüntüler."
 
 #: libraries/transformations/text_plain__dateformat.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
 #| "formatted date. The first option is the offset (in hours) which will be "
@@ -3978,13 +3977,13 @@ msgid ""
 "documentation for PHP's strftime() function and for \"utc\" it is done using "
 "gmdate() function."
 msgstr ""
-"Biçimlendirilmiş tarih olarak ZAMAN, ZAMAN BİLGİSİ, TARİH veya sayısal  unix "
-"zaman bilgisi alanını görüntüler. İlk seçenek zaman bilgisine (Varsayılan: "
-"0) eklenecek olan karşılık (saat cinsinden). İkinci seçeneği farklı tarih/"
-"zaman biçimi dizgisini belirtmek için kullanın. Üçüncü seçenek yerel tarihi "
-"veya bunun için UTC olanı (\"local\" veya \"utc\" dizgisi kullanın) görmek "
-"istediğinizi belirler. Buna göre tarih biçimi farklı değere sahiptir - "
-"\"local\" için PHP'nin strftime() işlevine belgelerden bakın ve \"utc\" ise "
+"Biçimlendirilmiş tarih olarak ZAMAN, ZAMAN BİLGİSİ, TARİH veya sayısal unix "
+"zaman bilgisi sütununu görüntüler. İlk seçenek zaman bilgisine (Varsayılan: "
+"0) eklenecek olan karşılık (saat cinsinden). İkinci seçeneği farklı "
+"tarih/zaman biçimi dizgisini belirtmek için kullanın. Üçüncü seçenek yerel "
+"tarihi veya bunun için UTC olanı (\"local\" veya \"utc\" dizgisi kullanın) "
+"görmek istediğinizi belirler. Buna göre tarih biçimi farklı değere sahiptir "
+"- \"local\" için PHP'nin strftime() işlevine belgelerden bakın ve \"utc\" ise "
 "gmdate() işlevi kullanılarak olur."
 
 #: libraries/transformations/text_plain__external.inc.php:10
