Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:41+0200\n"
+"PO-Revision-Date: 2010-06-12 15:53+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3987,7 +3987,6 @@ msgstr ""
 "gmdate() işlevi kullanılarak olur."
 
 #: libraries/transformations/text_plain__external.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "LINUX ONLY: Launches an external application and feeds it the field data "
 #| "via standard input. Returns the standard output of the application. The "
@@ -4011,16 +4010,16 @@ msgid ""
 "will prevent wrapping and ensure that the output appears all on one line "
 "(Default 1)."
 msgstr ""
-"SADECE LINUX: Harici bir uygulama çalıştırır ve alan verisini standart giriş "
-"yoluyla besler. Uygulamanın standart çıktısı döner. Düzgün HTML kodu baskısı "
-"için varsayılan düzenlidir. Güvenlik nedeniyle libraries/transformations/"
-"text_plain__external.inc.php dosyasını elle düzenlemeli ve olmasını "
-"istediğiniz araçları listelemelisiniz. İlk seçenek kullanmak istediğiniz "
-"program sayısı ve ikinci seçenek program için parametrelerdir. Üçüncü "
-"seçenek, eğer 1'e ayarlanırsa, htmlspecialchars() işlevi kullanılarak "
-"çıktıyı dönüştürecektir (Varsayılan 1). Dördüncü seçenek, eğer 1'e "
-"ayarlanırsa, sözcük kaydırma korunacak ve tüm çıktı tek bir satırda "
-"görünecektir (Varsayılan 1)."
+"SADECE LINUX: Harici bir uygulama çalıştırır ve sütun verisini standart "
+"giriş yoluyla besler. Uygulamanın standart çıktısı döner. Düzgün HTML kodu "
+"baskısı için varsayılan düzenlidir. Güvenlik nedeniyle "
+"libraries/transformations/text_plain__external.inc.php dosyasını elle "
+"düzenlemeli ve olmasını istediğiniz araçları listelemelisiniz. İlk seçenek "
+"kullanmak istediğiniz program sayısı ve ikinci seçenek program için "
+"parametrelerdir. Üçüncü seçenek, eğer 1'e ayarlanırsa, htmlspecialchars() "
+"işlevi kullanılarak çıktıyı dönüştürecektir (Varsayılan 1). Dördüncü "
+"seçenek, eğer 1'e ayarlanırsa, sözcük kaydırma korunacak ve tüm çıktı tek "
+"bir satırda görünecektir (Varsayılan 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
 #, fuzzy
