--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:53+0200\n"
+"PO-Revision-Date: 2010-06-12 15:55+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4022,7 +4022,6 @@ msgstr ""
 "bir satırda görünecektir (Varsayılan 1)."
 
 #: libraries/transformations/text_plain__formatted.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays the contents of the field as-is, without running it through "
 #| "htmlspecialchars(). That is, the field is assumed to contain valid HTML."
@@ -4030,8 +4029,8 @@ msgid ""
 "Displays the contents of the column as-is, without running it through "
 "htmlspecialchars(). That is, the column is assumed to contain valid HTML."
 msgstr ""
-"Alanın içeriğini, htmlspecialchars() işlevini çalıştırmadan olduğu gibi "
-"görüntüler. Bu, geçerli HTML içerdiği var sayılan alandır."
+"Sütunun içeriğini, htmlspecialchars() işlevini çalıştırmadan olduğu gibi "
+"görüntüler. Bu, geçerli HTML içerdiği var sayılan sütundur."
 
 #: libraries/transformations/text_plain__imagelink.inc.php:10
 #, fuzzy
