Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 15:55+0200\n"
+"PO-Revision-Date: 2010-06-12 15:56+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4047,7 +4047,6 @@ msgstr ""
 "seçenekler piksel cinsinden genişlik ve yüksekliktir."
 
 #: libraries/transformations/text_plain__link.inc.php:10
-#, fuzzy
 #| msgid ""
 #| "Displays a link; the field contains the filename. The first option is a "
 #| "URL prefix like \"http://www.example.com/\". The second option is a title "
@@ -4057,9 +4056,9 @@ msgid ""
 "prefix like \"http://www.example.com/\". The second option is a title for "
 "the link."
 msgstr ""
-"Bir bağlantı görüntüler; alan dosya adını içerir. İlk seçenek \"http://www."
-"adresim.com/\" gibi bir URL ön ekidir. İkinci seçenek bağlantı için "
-"başlıktır."
+"Bir bağlantı görüntüler; sütun, dosya adını içerir. İlk seçenek "
+"\"http://www.adresim.com/\" gibi bir URL ön ekidir. İkinci seçenek bağlantı "
+"için başlıktır."
 
 #: libraries/transformations/text_plain__longToIpv4.inc.php:10
 msgid ""
