--- a/po/tr.po
+++ b/po/tr.po
@@ -4288,10 +4288,9 @@ msgid "Page name"
 msgstr "Sayfa adı"
 
 #: pdf_pages.php:314
-#, fuzzy
 #| msgid "Automatic layout"
 msgid "Automatic layout based on"
-msgstr "Otomatik yerleşim"
+msgstr "Otomatik yerleşim tabanı"
 
 #: pdf_pages.php:316
 msgid "Internal relations"
