--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 16:01+0200\n"
+"PO-Revision-Date: 2010-06-12 16:02+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4419,7 +4419,6 @@ msgid "To select relation, click :"
 msgstr "İlişkiyi seçmek için buraya tıklayın :"
 
 #: pmd_help.php:29
-#, fuzzy
 #| msgid ""
 #| "The display field is shown in pink. To set/unset a field as the display "
 #| "field, click the \"Choose field to display\" icon, then click on the "
@@ -4429,9 +4428,9 @@ msgid ""
 "column, click the \"Choose column to display\" icon, then click on the "
 "appropriate column name."
 msgstr ""
-"Görüntü alanı pembe ile gösterilir. Alanı, görüntü alanı olarak ayarlamak/"
-"ayarı kaldırmak için \"Görüntülemek için alan seç\" simgesine tıklayın, "
-"sonrada uygun alan adı üzerine tıklayın."
+"Görüntü sütunu pembe ile gösterilir. Alanı, görüntü sütunu olarak "
+"ayarlamak/ayarı kaldırmak için \"Görüntülemek için sütun seç\" simgesine "
+"tıklayın, sonrada uygun sütun adı üzerine tıklayın."
 
 #: pmd_pdf.php:63
 msgid "Page has been created"
