--- a/po/tr.po
+++ b/po/tr.po
@@ -6115,7 +6115,7 @@ msgstr "Aşağıdaki sorgular çalıştırıldı:"
 
 #: server_synchronize.php:1122
 msgid "Enter manually"
-msgstr ""
+msgstr "Elle giriş"
 
 #: server_synchronize.php:1123
 #, fuzzy
