--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 16:12+0200\n"
+"PO-Revision-Date: 2010-06-12 16:13+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -7171,10 +7171,9 @@ msgid "Disallow BLOB and BINARY columns from editing"
 msgstr "BLOB ve BINARY sütunlarını düzenlemeye izin vermez"
 
 #: setup/lib/messages.inc.php:225
-#, fuzzy
 #| msgid "Protect binary fields"
 msgid "Protect binary columns"
-msgstr "Binari alanlarını koru"
+msgstr "Binari sütunlarını koru"
 
 #: setup/lib/messages.inc.php:226
 msgid ""
