--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 16:41+0200\n"
+"PO-Revision-Date: 2010-06-12 16:45+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -7577,7 +7577,7 @@ msgstr "Otomatik olarak sürümleri oluştur"
 
 #: setup/lib/messages.inc.php:305
 msgid "Defines the list of statements the auto-creation uses for new versions."
-msgstr ""
+msgstr "Yeni sürümler için otomatik oluşturma kullanan ifade listesini tanımlar"
 
 #: setup/lib/messages.inc.php:306
 #, fuzzy
