--- a/po/tr.po
+++ b/po/tr.po
@@ -7618,7 +7618,7 @@ msgstr ""
 
 #: setup/lib/messages.inc.php:312
 msgid "Add DROP DATABASE"
-msgstr ""
+msgstr "DROP DATABASE ifadesi ekle"
 
 #: setup/lib/messages.inc.php:313
 msgid "You should use SSL connections if your web server supports it"
