--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 19:23+0200\n"
+"PO-Revision-Date: 2010-06-12 19:24+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -7697,13 +7697,12 @@ msgid "Verbose name of this server"
 msgstr "Sunucunun fazladan adı"
 
 #: setup/lib/messages.inc.php:329
-#, fuzzy
 #| msgid ""
 #| "Whether a user should be displayed a &quot;show all (records)&quot; button"
 msgid "Whether a user should be displayed a &quot;show all (rows)&quot; button"
 msgstr ""
-"Kullanıcıya &quot;tümünü (kayıtları) göster&quot; düğmesinin görüntülenip "
-"görüntülenmeyeceğidir"
+"Kullanıcının &quot;tümünü (satırları) göster&quot; düğmesini görüntüleyip "
+"görüntüleyemeyeceğidir"
 
 #: setup/lib/messages.inc.php:330
 msgid "Allow to display all the rows"
