--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 19:24+0200\n"
+"PO-Revision-Date: 2010-06-12 19:25+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -7901,7 +7901,7 @@ msgstr ""
 "s, %s tarihinde yayınlandı."
 
 #: setup/lib/messages.inc.php:372
-#, fuzzy, php-format
+#, php-format
 #| msgid ""
 #| "You are using subversion version, run [kbd]svn update[/kbd] :-)[br]The "
 #| "latest stable version is %s, released on %s."
@@ -7909,8 +7909,8 @@ msgid ""
 "You are using Git version, run [kbd]git pull[/kbd] :-)[br]The latest stable "
 "version is %s, released on %s."
 msgstr ""
-"Altsürüm sürümünü kullanıyorsunuz, [kbd]svn güncellemesini[/kbd] "
-"çalıştırın :-)[br]Son kararlı sürüm %s, %s tarihinde yayınlandı."
+"Git sürümünü kullanıyorsunuz, [kbd]git pull[/kbd] çalıştırın :-)[br]Son "
+"kararlı sürüm %s, %s tarihinde yayınlandı."
 
 #: setup/lib/messages.inc.php:373
 msgid "No newer stable version is available"
