--- a/po/tr.po
+++ b/po/tr.po
@@ -8000,10 +8000,9 @@ msgid "Ignore"
 msgstr "Yoksay"
 
 #: tbl_change.php:728
-#, fuzzy
 #| msgid " Because of its length,<br /> this field might not be editable "
 msgid " Because of its length,<br /> this column might not be editable "
-msgstr "Uzunluğu nedeniyle,<br /> bu alan düzenlenebilir olmayabilir "
+msgstr " Uzunluğu nedeniyle,<br /> bu sütun düzenlenebilir olmayabilir "
 
 #: tbl_change.php:888
 msgid "Remove BLOB Repository Reference"
