--- a/po/tr.po
+++ b/po/tr.po
@@ -8268,7 +8268,7 @@ msgstr ""
 #: tbl_relation.php:405
 #| msgid "Internal relations"
 msgid "Internal relation"
-msgstr "Dahili ilişki"
+msgstr "Dahili bağlantılı"
 
 #: tbl_relation.php:407
 msgid ""
