--- a/po/tr.po
+++ b/po/tr.po
@@ -8347,10 +8347,9 @@ msgid "Propose table structure"
 msgstr "Tablo yapısı öner"
 
 #: tbl_structure.php:540
-#, fuzzy
 #| msgid "Add column(s)"
 msgid "Add column"
-msgstr "Sekme(leri) ekle"
+msgstr "Sütun ekle"
 
 #: tbl_structure.php:554
 msgid "At End of Table"
