Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 19:29+0200\n"
+"PO-Revision-Date: 2010-06-12 19:32+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -5952,7 +5952,7 @@ msgid ""
 "the <a href=#replication>replication section</a>."
 msgstr ""
 "Sunucudaki kopya etme durumuyla ilgili daha ayrıntılı bilgi için lütfen <a "
-"href=\"#replication\">kopya etme bölümünü</a> ziyaret edin."
+"href=#replication>kopya etme bölümünü</a> ziyaret edin."
 
 #: server_status.php:494
 msgid ""
