Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 19:32+0200\n"
+"PO-Revision-Date: 2010-06-12 19:35+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -4043,7 +4043,7 @@ msgid ""
 "third options are the width and the height in pixels."
 msgstr ""
 "Bir resim ve bir bağlantı görüntüler; sütun, dosya adını içerir. İlk seçenek "
-"\"http://www.adresim.com/\" gibi bir URL ön ekidir. İkinci ve üçüncü "
+"\"http://www.example.com/\" gibi bir URL ön ekidir. İkinci ve üçüncü "
 "seçenekler piksel cinsinden genişlik ve yüksekliktir."
 
 #: libraries/transformations/text_plain__link.inc.php:10
