--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 19:42+0200\n"
+"PO-Revision-Date: 2010-06-12 19:43+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -1529,7 +1529,7 @@ msgstr "phpMyAdmin belgeleri"
 #: libraries/auth/cookie.auth.lib.php:259
 msgid "You can enter hostname/IP address and port separated by space."
 msgstr ""
-"Anamakine adı/IP adresi ve bağlantı noktasını boşluk bırakarak ayrı ayrı "
+"Anamakine adı/IP adresi ve bağlantı noktasını boşluk bırakarak ayrı "
 "girebilirsiniz."
 
 #: libraries/auth/cookie.auth.lib.php:258
