--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-08 12:32-0400\n"
-"PO-Revision-Date: 2010-06-12 19:54+0200\n"
+"PO-Revision-Date: 2010-06-12 19:55+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -985,7 +985,7 @@ msgstr "Tasarımcı düzenlemelerini kaydetme hatası."
 #: js/messages.php:59 libraries/relation.lib.php:107
 #: libraries/relation.lib.php:119
 msgid "General relation features"
-msgstr "Genel ilişki özellikleri"
+msgstr "Genel bağlantı özellikleri"
 
 #: js/messages.php:59 libraries/relation.lib.php:101
 #: libraries/relation.lib.php:108
