--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-12 19:55+0200\n"
+"PO-Revision-Date: 2010-06-15 12:13+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -273,7 +273,7 @@ msgstr "Kısıtlamaları ekle"
 
 #: db_operations.php:496
 msgid "Switch to copied database"
-msgstr "Kopyalanmış veritabanına geç."
+msgstr "Kopyalanmış veritabanına geç"
 
 #: db_operations.php:537
 msgid "BLOB Repository"
