--- a/po/tr.po
+++ b/po/tr.po
@@ -805,7 +805,7 @@ msgstr "Web sunucusu %s dosyasını kaydetmek için izne sahip değil."
 #: export.php:629
 #, php-format
 msgid "Dump has been saved to file %s."
-msgstr "Döküm dosyası %s dosyasına kaydedildi"
+msgstr "Döküm dosyası %s dosyasına kaydedildi."
 
 #: import.php:60
 #, php-format
