--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 12:17+0200\n"
+"PO-Revision-Date: 2010-06-15 12:18+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -221,7 +221,7 @@ msgstr "%s veritabanı %s olarak yeniden adlandırıldı"
 #: db_operations.php:240
 #, php-format
 msgid "Database %s has been copied to %s"
-msgstr "%s veritabanı %s'e kopyalandı."
+msgstr "%s veritabanı %s'e kopyalandı"
 
 #: db_operations.php:412
 msgid "Rename database to"
