--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 12:19+0200\n"
+"PO-Revision-Date: 2010-06-15 12:21+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2219,7 +2219,7 @@ msgstr "Tabloların boyutlarını göster"
 
 #: libraries/display_pdf_schema.lib.php:41
 msgid "Display all tables with the same width"
-msgstr "Bütün tablolar aynı genişlikte gösterilsin?"
+msgstr "Bütün tablolar aynı genişlikte gösterilsin"
 
 #: libraries/display_pdf_schema.lib.php:46
 msgid "Only show keys"
