Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-06-13 09:03-0400\n"
-"PO-Revision-Date: 2010-06-15 12:22+0200\n"
+"PO-Revision-Date: 2010-06-15 12:23+0200\n"
 "Last-Translator:  <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3736,8 +3736,9 @@ msgid ""
 "There seems to be an error in your SQL query. The MySQL server error output "
 "below, if there is any, may also help you in diagnosing the problem"
 msgstr ""
-"SQL sorgunuzda bir hata olduğu görünüyor. Eğer varsa, aşağıdaki MySQL sunucu "
-"hata çıktısı, sorunu teşhis etmenizde ayrıca size yardımcı olabilir."
+"SQL sorgunuzda bir hata olduğu görünüyor. MySQL sunucusu hata çıktısı "
+"aşağıdadır, eğer varsa, sorunu teşhis etmenizde ayrıca size yardımcı "
+"olabilir"
 
 #: libraries/sqlparser.lib.php:173
 msgid ""
